# units

./: ARCHITECTURE_SPEC.md  CLAUDE.md  Cargo.toml  EXEC_ENV_ALIGNMENT_TASKS.md  README.md  SIMPLIFICATION_GUIDE.md
crates/units-core-types/: Cargo.toml
crates/units-core-types/src/: constants.rs  error.rs  lib.rs  objects.rs  proofs.rs  runtime.rs  scheduler.rs  storage.rs  transaction.rs  transaction_manager.rs  units_storage_trait.rs  verification.rs  vm_executor.rs
crates/units-kernel-modules/: Cargo.toml  README.md
crates/units-kernel-modules/account/: Cargo.toml  FLEXIBLE_AUTH_ARCHITECTURE.md
crates/units-kernel-modules/account/src/: crypto.rs  enhanced_module.rs  lib.rs  module.rs
crates/units-kernel-modules/account/src/auth/: policies.rs
crates/units-kernel-modules/account/tests/: integration_test.rs
crates/units-kernel-modules/token/: Cargo.toml  link.x
crates/units-kernel-modules/token/.cargo/: config.toml.riscv
crates/units-kernel-modules/token/tests/: runtime_integration_test.rs
crates/units-kernel-sdk/src/: allocator.rs  lib.rs
crates/units-proofs/: Cargo.toml
crates/units-proofs/src/: engine.rs  lib.rs  types.rs
crates/units-runtime/: Cargo.toml
crates/units-runtime-impl/: Cargo.toml
crates/units-runtime-impl/src/: lib.rs  mock_runtime.rs  riscv_executor.rs  verification.rs
crates/units-runtime/src/: host_environment.rs  lib.rs  mock_runtime.rs  riscv_executor.rs  runtime.rs  transaction_manager.rs  verification.rs  vm_executor.rs
crates/units-storage/: Cargo.toml
crates/units-storage-impl/: Cargo.toml
crates/units-storage-impl/src/: consolidated_storage.rs  lib.rs  lock_manager.rs  receipt_storage.rs  wal.rs
crates/units-storage/src/: lib.rs
services/units-core/: Cargo.toml  build.rs
services/units-core/proto/: units.proto
services/units-core/src/: config.rs  error.rs  json_rpc.rs  lib.rs  main.rs  server.rs  service.rs
services/units-core/src/services/: factory.rs  minimal_services.rs  mod.rs  object_service.rs  proof_service.rs  simple_build_test.rs  slot_service.rs  storage_service.rs  transaction_service.rs
services/units-core/tests/: service_integration_test.rs
units/: Cargo.toml
units-core/: Cargo.toml
units-core/src/: error.rs  id.rs  lib.rs  locks.rs  objects.rs  scheduler.rs  transaction.rs
units-core/src/proofs/: engine.rs  hash_proof.rs  merkle_proof.rs  mod.rs  proof.rs  proof_engine.rs
units-kernel-modules/: Cargo.toml
units-kernel-modules/account/: Cargo.toml  SIGNATURE_VERIFICATION.md
units-kernel-modules/account/src/: enhanced_module.rs  lib.rs  main.rs  module.rs
units-kernel-modules/account/src/auth/: mod.rs  multi_factor.rs  policies.rs  signature_schemes.rs
units-kernel-modules/account/tests/: flexible_auth_test.rs  integration_test.rs  signature_test.rs
units-kernel-modules/token/: Cargo.toml  build.rs  riscv_link.ld
units-kernel-modules/token/src/: allocator.rs  lib.rs  main.c  main.rs  test_harness.rs
units-kernel-modules/token/tests/: integration_test.rs  runtime_integration_test.rs
units-kernel-sdk/: Cargo.toml
units-kernel-sdk/src/: allocator.rs  lib.rs
units-proofs/: Cargo.toml
units-proofs/src/: hash_proof.rs  lib.rs  simple_proof.rs
units-runtime/: Cargo.toml
units-runtime/src/: host_environment.rs  lib.rs  mock_runtime.rs  receipt_storage.rs  riscv_executor.rs  runtime.rs  runtime_backend.rs  transaction_manager.rs  verification.rs  vm_executor.rs
units-storage/: Cargo.toml
units-storage-impl/: Cargo.toml
units-storage-impl/src/: consolidated_storage.rs  lib.rs  lock_manager.rs  receipt_storage.rs  sqlite.rs  sqlite_adapter.rs  storage.rs  storage_traits.rs  wal.rs
units-storage-impl/src/deprecated/: iterators.rs  mod.rs
units-storage/src/: lib.rs
