[workspace]
resolver = "2"
members = [
    "units-core",
    "units-storage",
    "units-storage-impl", 
    "units-runtime",
    "units-kernel-sdk",
    "units-kernel-modules/token",
    "units-kernel-modules/account",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Units Team"]
license = "MIT"
repository = "https://github.com/abisshekk92/units-storage"
readme = "README.md"

[workspace.dependencies]
curve25519-dalek = "4.1.3"
sha2 = "0.10.8"
blake3 = "1.6.1"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
tempfile = "3.8"
hex = "0.4.3"
borsh = { version = "1.5", features = ["derive"] }

# Internal crates
units-core = { path = "./units-core" }
units-storage = { path = "./units-storage" }
units-storage-impl = { path = "./units-storage-impl" }
units-runtime = { path = "./units-runtime" }
units-kernel-sdk = { path = "./units-kernel-sdk" }
