[workspace]
resolver = "2"
members = [
    "crates/units-core-types",
    "crates/units-proofs",
    "crates/units-storage-impl", 
    "crates/units-runtime-impl",
    "crates/units-kernel-sdk",
    "crates/units-kernel-modules/token",
    "crates/units-kernel-modules/account",
    "services/units-core",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Units Team"]
license = "MIT"
repository = "https://github.com/abisshekk92/units-storage"
readme = "README.md"

[workspace.dependencies]
curve25519-dalek = "4.1.3"
sha2 = "0.10.8"
blake3 = "1.6.1"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
tempfile = "3.8"
hex = "0.4.3"
borsh = { version = "1.5", features = ["derive"] }

# Internal crates
units-core-types = { path = "./crates/units-core-types" }
units-proofs = { path = "./crates/units-proofs" }
units-storage-impl = { path = "./crates/units-storage-impl" }
units-runtime-impl = { path = "./crates/units-runtime-impl" }
units-kernel-sdk = { path = "./crates/units-kernel-sdk" }
