[workspace]
members = ["token"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Units Team"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
borsh = { version = "1.5", features = ["derive"] }
thiserror = "2.0"
anyhow = "1.0"
units-core = { path = "../units-core" }