[package]
name = "units-core-types"
version.workspace = true
edition.workspace = true
description = "Core type definitions for Universal Information Tokenization System (UNITS)"
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords = ["units", "tokenization", "core"]

[dependencies]
curve25519-dalek.workspace = true
sha2.workspace = true
blake3.workspace = true
bincode.workspace = true
serde.workspace = true
serde_json = "1.0"
thiserror.workspace = true
anyhow.workspace = true
log.workspace = true
hex.workspace = true

[features]
default = []