[package]
name = "units-proofs"
version.workspace = true
edition.workspace = true
description = "Proof generation and verification for Universal Information Tokenization System (UNITS)"
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords = ["units", "proofs", "verification"]

[dependencies]
units-core-types = { path = "../units-core-types" }
curve25519-dalek.workspace = true
sha2.workspace = true
blake3.workspace = true
bincode.workspace = true
serde.workspace = true
serde_json = "1.0"
thiserror.workspace = true
anyhow.workspace = true
log.workspace = true
hex.workspace = true

[features]
default = []