[package]
name = "units-core-service"
version.workspace = true
edition.workspace = true
description = "UNITS Core service with JSON-RPC and gRPC endpoints"
license.workspace = true
repository.workspace = true

[dependencies]
# Internal crates
units-core-types.workspace = true
units-storage-impl.workspace = true
units-runtime.workspace = true

# Async runtime
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros", "net", "signal"] }

# JSON-RPC
jsonrpsee = { version = "0.21", features = ["server", "client", "macros"] }

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling  
anyhow.workspace = true
thiserror.workspace = true

# Hex encoding
hex.workspace = true

# Logging
log.workspace = true
env_logger = "0.10"

# HTTP server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Configuration
clap = { version = "4.0", features = ["derive", "env"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
chrono = "0.4"

[features]
default = []