[package]
name = "account"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
units-kernel-sdk = { path = "../../units-kernel-sdk", default-features = false }
borsh = { version = "1.5", default-features = false, features = ["derive"] }

[dev-dependencies]
units-runtime = { path = "../../units-runtime" }
units-kernel-sdk = { path = "../../units-kernel-sdk", features = ["std"] }
units-core = { path = "../../units-core" }
tokio = { version = "1.0", features = ["rt", "macros"] }

[lib]
name = "account"
crate-type = ["lib"]

[[bin]]
name = "account"
path = "src/main.rs"

[features]
default = ["std"]
std = ["units-kernel-sdk/std", "borsh/std"]