[package]
name = "account"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
units-kernel-sdk = { path = "../../units-kernel-sdk", default-features = false }
borsh = { version = "1.5", default-features = false, features = ["derive"] }
curve25519-dalek = { version = "4.1.3", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
arrayref = "0.3"

[dev-dependencies]
units-runtime-impl = { path = "../../units-runtime-impl" }
units-kernel-sdk = { path = "../../units-kernel-sdk", features = ["std"] }
units-core-types = { path = "../../units-core-types" }
tokio = { version = "1.0", features = ["rt", "macros"] }

[lib]
name = "account"
crate-type = ["lib"]

[[bin]]
name = "account"
path = "src/main.rs"

[features]
default = ["std"]
std = ["units-kernel-sdk/std", "borsh/std", "sha2/std"]