[package]
name = "token"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
units-kernel-sdk = { path = "../../units-kernel-sdk", default-features = false }
borsh = { version = "1.5", default-features = false, features = ["derive"] }

[dev-dependencies]
units-runtime-impl = { path = "../../units-runtime-impl" }
units-kernel-sdk = { path = "../../units-kernel-sdk", features = ["std"] }
units-core-types = { path = "../../units-core-types" }
tokio = { version = "1.0", features = ["rt", "macros"] }

# No longer need cc for building C code

[lib]
name = "token"
crate-type = ["lib"]

[[bin]]
name = "token"
path = "src/main.rs"

[features]
default = ["std"]
std = ["units-kernel-sdk/std", "borsh/std"]